src/test/deca/codegen/invalid/nombreTropGrandFloat.deca
// Description:
//    Calcul un nombre trop grand
//
// Resultats: "Debordement flottant nombre trop grand" 
// Resultats avec decac - n 10^47 = 1.00000e+36
//
// Historique:
//    cree le 14/01/2022

{
    float x = 1000000;
    float y = 1000000;
    float z = x*y*x*x*x*x*x;
    print("10^47 = ");
    println(z);
}